package main.views.components;

public class CourseItem {
    
}
